src/main/java/com/example/stream/spring/courses/reactive/example/model/error/UniversityNotFound.java
package com.example.stream.spring.courses.reactive.example.model.error;

public record UniversityNotFound() implements UniversityError {
}
